JavaScript grammar 1.1 String-type

--- a/JavaScript高级程序设计/index.html
+++ b/JavaScript高级程序设计/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="h1"></div>
 </body>
 </html>
 <script src="./LanguageBasic/grammar.js"></script>
